--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "terser": "^5.43.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.0.2"
   }
 }
